--- a/src/practica2.Rmd
+++ b/src/practica2.Rmd
@@ -15,48 +15,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r load_libraries, include=FALSE}
 library(stringr)
+library(VIM)
 
 
 ```
 
 # 1. Detalles de la actividad
 
-### 1.1. Descripción
-
 En esta actividad se elabora un caso práctico, consistente en el tratamiento de un conjunto de datos (en inglés, dataset), orientado a aprender a identificar los datos relevantes para un proyecto analítico y usar las herramientas de integración, limpieza, validación y análisis de las mismas.
-
-### 1.2. Objetivos
-
-Los objetivos que se persiguen mediante el desarrollo de esta actividad práctica son los siguientes:
-
-* Aprender a aplicar los conocimientos adquiridos y su capacidad de resolución de problemas en entornos nuevos o poco conocidos dentro de contextos más amplios o multidisciplinares.
-
-* Saber identificar los datos relevantes y los tratamientos necesarios (integración, limpieza y validación) para llevar a cabo un proyecto analítico.
-
-* Aprender a analizar los datos adecuadamente para abordar la información contenida en los datos.
-
-* Identificar la mejor representación de los resultados para aportar conclusiones sobre el problema planteado en el proceso analítico.
-
-* Actuar con los principios éticos y legales relacionados con la manipulación de datos en función del ámbito de aplicación.
-
-* Desarrollar las habilidades de aprendizaje que permita continuar estudiando de un modo que tendrá que ser en gran medida autodirigido o autónomo.
-
-* Desarrollar la capacidad de búsqueda, gestión y uso de información y recursos en el ámbito de la ciencia de datos.
-
-### 1.3. Competencias
-
-Así, las competencias del Máster en _Data Science_ que se desarrollan son:
-
-* Capacidad de analizar un problema en el nivel de abstracción adecuado a cada situación y aplicar las habilidades y conocimientos adquiridos para abordarlo y resolverlo.
-
-* Capacidad para aplicar las técnicas específicas de tratamiento de datos (integración, transformación, limpieza y validación) para su posterior análisis.
 
 # 2. Resolución 
 
 ### 2.1. Descripción del dataset 
 
 El conjunto de datos objeto de análisis se ha obtenido a partir de un dataset libre disponible en Kaggle. 
-
 Este conjunto de datos incluye información sobre diferentes marcas de vehículos nuevos y usados a la venta en los EE.UU. Los datos se obtuvieron haciendo uso de la técnica de _Web Scraping._ Está constituido por 2499 vehículos (filas o registros), de los que se han analizado 13 características (columnas) de cada uno.
 
 Las características analizadas en este dataset son:
@@ -90,6 +62,12 @@ Las características analizadas en este dataset son:
 ### 2.2. Integración y selección de los datos de interés a analizar.
 
 
+
+
+
+
+
+
 ### 2.3. Limpieza de los datos 
 
 En primer lugar, procedemos a realizar la lectura del fichero en formato CSV en el que se encuentran los datos. A continuación, examinaremos el tipo de datos con los que R ha interpretado cada variable.
@@ -121,7 +99,9 @@ head(cars)
 
 ```
 
-A continuación, mostraremos los valores de las variables cualitativas o categóricas mediante el uso de tablas de frecuencia. Ésto nos permitirá saber si hay valores fuera del rando o valores extraños en ellas. 
+#### 2.3.1. Normalización de variables
+
+A continuación, mostraremos los valores de las variables cualitativas o categóricas mediante el uso de tablas de frecuencia. Ésto nos permitirá saber si hay valores fuera del rango o valores extraños en ellas. 
 
 ```{r chunck3}
 #variables cualitativas
@@ -133,36 +113,60 @@ table(cars$state)
 table(cars$country)
 ```
 
-#### 2.3.1. Valores perdidos 
+Los colores se van a clasificar en los siguientes valores: _beige, black, blue, brown, orange, gold, red, silver, white, gray, green, purple, yellow, no-color_ 
+
+```{r chunck4}
+cars$color <- str_replace(cars$color, ".*beige.*", "beige")
+cars$color <- str_replace(cars$color, ".*black.*", "black")
+cars$color <- str_replace(cars$color, ".*blue.*", "blue")
+cars$color <- str_replace(cars$color, ".*brown.*", "brown")
+cars$color <- str_replace(cars$color, ".*orange.*", "orange")
+cars$color <- str_replace(cars$color, ".*gold.*", "gold")
+cars$color <- str_replace(cars$color, ".*red.*", "red")
+cars$color <- str_replace(cars$color, ".*silver.*", "silver")
+cars$color <- str_replace(cars$color, ".*white.*", "white")
+cars$color <- str_replace(cars$color, ".*gray.*", "gray")
+cars$color <- str_replace(cars$color, ".*green.*", "green")
+cars$color <- str_replace(cars$color, ".*purple.*", "purple")
+cars$color <- str_replace(cars$color, ".*yellow.*", "yellow")
+cars$color <- str_replace(cars$color, "burgundy", "red")
+cars$color <- str_replace(cars$color, "charcoal", "black")
+cars$color <- str_replace(cars$color, "color:", "no_color")
+cars$color <- str_replace(cars$color, "maroon", "brown")
+cars$color <- str_replace(cars$color, "magnetic metallic", "black")
+cars$color <- str_replace(cars$color, "royal crimson metallic tinted clearcoat", "purple")
+cars$color <- str_replace(cars$color, "turquoise", "blue")
+cars$color <- str_replace(cars$color, "tan", "beige")
+cars$color <- str_replace(cars$color, "guard", "black")
+
+table(cars$color)
+
+```
+
+#### 2.3.2. Valores perdidos 
 
 ¿Los datos contienen ceros o elementos vacíos? ¿Cómo gestionarías cada uno de estos casos?
 
-```{r chunck4}
+```{r chunck5}
 # valores perdidos(0 o vacíos)
 #Con la siguiente instrucción vemos si hay registros que están incompletos
 complete.cases(cars)
 
-#Analizamos valores perdidos en variables cuantitativas
-sum(is.na(cars$price))
-sum(cars$price == 0)
-
-sum(is.na(cars$year))
-sum(cars$year == 0)
-
-sum(is.na(cars$mileage))
-sum(cars$mileage == 0)
+#Analizamos valores perdidos
+sapply(cars, function(x) sum(is.na(x)))
+sapply(cars, function(x) sum(x == 0))
 ```
 
 En primer lugar, hemos comprobado si hay registros incompletos, es decir, en los que en alguno de sus atributos no se haya introducido valor. Con la instrucciones ejecutada, se comprueba que no hay ninguno, ya que no se ha obtenido ningún valor a **FALSE**.
 
 En segundo lugar, se ha analizado en cada una de las variables cuantitativas si existen valores almacenados equivalentes a 0 o NA. En el caso del precio, se han detectado 43 registros cuyo precio es 0; y para el caso del kilometraje, se han encontrado 6 registros con este mismo valor.
 
-En el caso de la variable _price_, son claramente valores perdidos ya que no tiene sentido que el precio de vente fijado sea de 0$ cuando la naturaleza de los anuncios es la venta de los vehículos. Será necesario imputar los valores de estas variables en estos registros.
+En el caso de la variable _price_, son claramente valores perdidos ya que no tiene sentido que el precio de venta fijado sea de 0$ cuando la naturaleza de los anuncios es la venta de los vehículos. Será necesario imputar los valores de estas variables en estos registros.
 
 En el caso de la variable _mileage_ cuyo valor es 0, se ha mirado el valor del atributo _year_, puesto que si éste valor se corresponde con coches del 2020, el valor registrado en el atributo _mileage_ puede ser correcto ya que se trataría de vehículos nuevos que no han recorrido ninguna milla aún. 
 
 
-```{r chunck5}
+```{r chunck6}
 
 years <- subset(cars$year, subset = cars$mileage == 0)
 print(years)
@@ -171,16 +175,43 @@ print(years)
 
 Trás realizar la comprobación, vemos que no es así en ninguno de los casos, es decir, son vehículos con cierta antigüedad, por lo que el valor a 0 de _mileage_ se corresponde con un valor perdido, que deberíamos de imputar.
 
-#### 2.3.2. Identificación y tratamiento de valores extremos.
+Para la imputación de los valores perdidos se empleará un método basado en la similitud o diferencia entre los registros: la imputación basada en k vecinos más próximos (en inglés, kNN-imputation). La elección de esta alternativa se realiza bajo la hipótesis de que nuestros registros guardan cierta relación. No obstante, es mejor trabajar con datos “aproximados” que con los propios elementos vacíos, ya que obtendremos análisis con menor margen de error.
 
-```{r chunck6}
+```{r chunck7}
+#primero hay que sustituir los valores 0 por NA 
+cars$price <- ifelse(cars$price == 0, NA, cars$price)
+cars$mileage <- ifelse(cars$mileage == 0, NA, cars$mileage)
+sapply(cars, function(x) sum(is.na(x)))
+
+#imputamos los valores NA usando el método kNN
+cars$price <- kNN(cars)$price
+cars$mileage <- kNN(cars)$mileage
+
+#comprobamos 
+sapply(cars, function(x) sum(is.na(x)))
+sapply(cars, function(x) sum(x == 0))
+
+
+```
+
+
+#### 2.3.3. Valores extremos.
+
+Los valores extremos o outliers son aquellos que parecen no ser congruentes si los comparamos con el resto de los datos. Para identificarlos, utilizaremos la representación mediante un diagrama de caja.
+
+```{r chunck8}
 boxplot(cars$price)
 
 boxplot(cars$year)
 
 boxplot(cars$mileage)
+
+summary(cars$price)
+summary(cars$year)
+summary(cars$mileage)
 ```
 
+En los tres diagramas anteriores se observan bastantes valores outliers. Ésto es debido a que el rango de valores de las tres variables es bastante amplio. Si revisamos los datos y los comparamos con los valores resumen de cada variable, llegamos a la conclusión de que son valores posibles. Por tanto, se mantendrán tal y como están recogidos.
 
 ### 2.4. Análisis de los datos 
 
@@ -195,6 +226,8 @@ En función de los datos y el objetivo del estudio, aplicar pruebas de contraste
 ### 2.5. Representación de los resultados a partir de tablas y gráficas.
 
 ### 2.6. Conclusiones
+
+### 2.7. Crear el archivo procesado. 
 
 
 
